chore(deps): upgrade toolchains and dependencies to latest stable (ADR-0006)